--- a/examples/index.html
+++ b/examples/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>HireForms List examples</title>
-        <!--link rel="stylesheet" href="css/main.css"-->
+        <link rel="stylesheet" type="text/css" href="index.css"/>
+        <script src="libs.js"></script>
         <script src="../build/index.js"></script>
+        <script src="index.js"></script>
     </head>
     <body>
-        <h1>HireForms List examples</h1>
     </body>
 </html>
